--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
+  "repository": "https://github.com/osain-az/editorjs-inline-list",
+
   "exports": {
     ".": {
       "import": "./dist/index.mjs",
