--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,6 @@ jobs:
           node-version: 20.x
     
       #- run: npm install --frozen-lockfile
-      - run:  npm i  
+      - run:  npm install --no-cache 
      # - run: npm run lint && npm run build
       - run: npm run build
