--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           node-version: 20.x
          # registry-url: "https://registry.npmjs.org"
-
+      - run : rm -rf package-lock.json node_modules
       - name: Install Dependencies
         run:  npm install
 
