--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
           node-version: 20.x
     
       #- run: npm install --frozen-lockfile
-     # - run : rm -rf package-lock.json node_modules
+      - run : rm -rf package-lock.json node_modules
       - run:  npm install  
      # - run: npm run lint && npm run build
       - run: npm run build
